# SpecSWD

./: CMakeLists.txt  README.md  a.out  pyproject.toml  setup.py  test.cpp
.github/workflows/: deploys.yml
bak/src.bak/solver.bak/: CMakeLists.txt  database.cpp  eigenvalues.cpp  frechet.cpp  group_kernels.cpp  initialize.cpp  solver.hpp
code_gen/: aniso_code_gen.ipynb  check.ipynb  derivative.ipynb  tti_code_gen.ipynb
docs/: conf.py  config.cpp.cfg  config.py.cfg  index.md  index.rst  install.md  specd.rst
docs/api/cpp/: _g_q_table_8hpp_source.html  annotated.html  annotated_dup.js  attenuation_8hpp_source.html  classes.html  classspecswd_1_1_solver_love-members.html  classspecswd_1_1_solver_love.html  classspecswd_1_1_solver_love.js  classspecswd_1_1_solver_rayl-members.html  classspecswd_1_1_solver_rayl.html  classspecswd_1_1_solver_rayl.js  config.cfg  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_86f43daa75dbdec851c3a22eac8d0521.js  doxygen_crawl.html  files.html  frechet__op_8hpp_source.html  functions.html  functions_func.html  index.html  iofunc_8hpp_source.html  mesh_8hpp_source.html  navtreeindex0.js  schur_8hpp_source.html  specswd_8hpp_source.html  structspecswd_1_1_mesh.html  vti_8hpp_source.html
docs/api/cpp/html/: annotated.html  attenuation_8hpp_source.html  classspecswd_1_1_solver_love-members.html  classspecswd_1_1_solver_love.html  classspecswd_1_1_solver_love.js  classspecswd_1_1_solver_rayl.html  dir_4f38db07240614f25134cb9a8bebbaf9.html  dir_4f38db07240614f25134cb9a8bebbaf9.js  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7be0d8c199b9408ae01f5d77515b8def.html  dir_7be0d8c199b9408ae01f5d77515b8def.js  dir_86f43daa75dbdec851c3a22eac8d0521.html  dir_e4e4d0a879cf2fea55ea29327f3b8b52.html  dir_e4e4d0a879cf2fea55ea29327f3b8b52.js  doxygen_crawl.html  frechet__op_8hpp_source.html  functions.html  functions_func.html  global_8hpp_source.html  mesh_8hpp_source.html  navtreedata.js  navtreeindex0.js  schur_8hpp_source.html  specswd_8hpp_source.html  structspecswd_1_1_mesh-members.html  structspecswd_1_1_mesh.html  structspecswd_1_1_mesh.js  vti_8hpp_source.html
docs/api/cpp/latex/: _g_q_table_8hpp_source.tex  annotated.tex  attenuation_8hpp_source.tex  classspecswd_1_1_solver_love.tex  classspecswd_1_1_solver_rayl.tex  files.tex  frechet__op_8hpp_source.tex  global_8hpp_source.tex  iofunc_8hpp_source.tex  mesh_8hpp_source.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  schur_8hpp_source.tex  specswd_8hpp_source.tex  structspecswd_1_1_mesh.tex  vti_8hpp_source.tex
docs/api/cpp/search/: all_5.js  all_7.js  classes_0.js  functions_0.js  functions_1.js  functions_6.js  searchdata.js
docs/api/python/: .buildinfo  annotated.html  annotated_dup.js  classes.html  classspecd_1_1specd_1_1_spec_work_space-members.html  classspecd_1_1specd_1_1_spec_work_space.html  classspecd_1_1specd_1_1_spec_work_space.js  dir_f0631b71a989581dd1702bc7c4076512.html  doxygen_crawl.html  functions.html  functions_func.html  genindex.html  index.html  index.rst  modules.html  navtreedata.js  navtreeindex0.js  objects.inv  py-modindex.html  search.html  searchindex.js  specd.html  specd.rst
docs/api/python/.doctrees/: environment.pickle  index.doctree  modules.doctree  specd.doctree
docs/api/python/_modules/: index.html
docs/markdown/: gallery.md
doxygen/: config.cfg
example/love/: att.txt  bench_cps.py  bench_org.py  benchmark.py  compute_group.py  gen_model.py  love.py  model.txt  model.txt.cps  no_att.txt  run.sh  run_att.sh  step0_database.py  step1_benchmark.py  test.ipynb  test.py
example/rayleigh/: benchmark.py  gen_model.py  model.txt  model.txt.cps  run.sh  run_att.sh
include/: GQTable.hpp
misc/doxygen/: doxygen.cfg
misc/source/: conf.py  index.rst
misc/source/markdown/: Tutorial.md  gallery.md  readme.md
misc/source/python/: index.rst  modules.rst
scripts/: attenuation.py  bench_cps.py  binary2h5.py  plot_disp.py
specd/: THSolver.py  __init__.py  attenuation.py  setup.py.bak  specd.py
src.bak/solver.bak/: frechet.hpp  sem.cpp  solver.hpp
src/aniso/: CMakeLists.txt  aniso.hpp  eigenvalues.cpp  sem.cpp  transform.cpp
src/cps330/: CMakeLists.txt  main.cpp
src/libswd/: CMakeLists.txt  global.hpp  init.cpp  main.cpp  pack.cpp  specswd.hpp  utils.cpp
src/mesh/: CMakeLists.txt  christoffel.cpp  database.cpp  initialize.cpp  interpolate.cpp  io.cpp  mesh.hpp
src/shared/: GQTable.cpp  GQTable.hpp  attenuation.cpp  attenuation.hpp  attenuation_table.cpp  attenuation_table.hpp  initialize.cpp.bak  iofunc.hpp  libgll.cpp  libgrl.cpp  quadrature.hpp  schur.hpp  schur.hpp.bak
src/solver/: christoffel.cpp  database.cpp  eigenvalues.cpp  frechet.cpp  frechet.hpp  initialize.cpp  io.cpp  main_love.cpp  sem.cpp  solver.hpp  transform.cpp
src/vti/: CMakeLists.txt  eigenvalue.cpp  eigenvalues.cpp  eigenvalues.cpp.bak  frechet.cpp  frechet_group.cpp  frechet_op.hpp  group_velocity.cpp  main_love.cpp  main_rayl.cpp  sem.cpp  transform.cpp  vti.hpp
(+9 files in other folders)
